tests/paczka1/small_fuzzy/18385459.err
Error in line 10: csdalz S773 97,0
Error in line 13: S892 S773 -1,9
